--- a/src/Akka.DI.NetCore/Akka.DI.NetCore.csproj
+++ b/src/Akka.DI.NetCore/Akka.DI.NetCore.csproj
@@ -7,7 +7,15 @@
     <PackageProjectUrl>https://github.com/YucelCelik/akka-di-net-core</PackageProjectUrl>
     <RepositoryUrl>https://github.com/YucelCelik/akka-di-net-core.git</RepositoryUrl>
     <Version>1.0.1</Version>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.3.10" />
